crates/jian-core/tests/snapshots/responsive_snapshots__all_constraints_320.snap
---
source: crates/jian-core/tests/responsive_snapshots.rs
expression: "responsive_rects(width, 800.0)"
---
center:
  - 135
  - 180
  - 50
  - 30
clamped_stretch:
  - 10
  - 320
  - 300
  - 60
fill_child:
  - 20
  - 482
  - 280
  - 30
left_top:
  - 10
  - 10
  - 50
  - 30
nested_right:
  - 270
  - 510
  - 20
  - 20
panel:
  - 20
  - 420
  - 280
  - 120
right_bottom:
  - 260
  - 750
  - 40
  - 30
root:
  - 0
  - 0
  - 320
  - 800
scale_both:
  - 32
  - 293
  - 64
  - 54
stretch_both:
  - 20
  - 140
  - 280
  - 250
wrapping_text:
  - 20
  - 420
  - 280
  - 62
